correcciones para paginado y responsive

--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,16 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- 🔥 TÍTULO DE LA PESTAÑA -->
+		<title>JV Portafolio</title>
+
+		<!-- 🔥 FAVICON -->
+		<link rel="icon" href="/assets/icon.jpg" />
+
 		%sveltekit.head%
 	</head>
+
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
